Was updated README.md the nickname of hub.docker.com

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+7c76aff Fri Jun 11 13:29:37 2021 -0400 Was updated exercise Docker for Application Packaging.
 7e67594 Thu Jan 14 21:09:39 2021 +0000 Add submition directories
 dc03254 Thu Jan 14 21:02:07 2021 +0000 add the Kubernetes directory
 c3fd5e9 Thu Jan 14 11:08:32 2021 +0000 Set Vagrant box to use the latest image
