Was added in file build.sh: instruction for create mod file.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+8a59c11 Fri Jun 11 13:32:43 2021 -0400 Was updated README.md the nickname of hub.docker.com
 7c76aff Fri Jun 11 13:29:37 2021 -0400 Was updated exercise Docker for Application Packaging.
 7e67594 Thu Jan 14 21:09:39 2021 +0000 Add submition directories
 dc03254 Thu Jan 14 21:02:07 2021 +0000 add the Kubernetes directory
