--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+48340fe Sat Jun 19 19:29:42 2021 -0400 Revert "was renamed manifest files of kubernetes"
+38b8842 Sat Jun 19 19:25:49 2021 -0400 was renamed manifest files of kubernetes
+9a7eb36 Sat Jun 19 19:21:03 2021 -0400 Updated Dockerfile, and added image of hub.docker.com
+cba97e9 Sat Jun 19 18:36:42 2021 -0400 Updated README.md
+4c1af6a Sat Jun 19 17:25:57 2021 -0400 The purpose of the files in this repository is described
+5d09382 Fri Jun 11 13:38:53 2021 -0400 Was added in file build.sh: instruction for create mod file.
 8a59c11 Fri Jun 11 13:32:43 2021 -0400 Was updated README.md the nickname of hub.docker.com
 7c76aff Fri Jun 11 13:29:37 2021 -0400 Was updated exercise Docker for Application Packaging.
 7e67594 Thu Jan 14 21:09:39 2021 +0000 Add submition directories
