re-creating exercise lesson 3.21 Kubernetes-Cluster.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+70d7b31 Sat Jul 17 21:12:50 2021 -0400 Was updated CHANGELOG
 5571c66 Sat Jul 17 21:06:22 2021 -0400 re-creating exercise lesson 3.25 Declarative Kubernetes Manifests
 1a14e05 Sat Jul 17 20:57:04 2021 -0400 re-creating exercise lesson 3.21 Kubernetes-Cluster
 5f314cf Sat Jul 17 20:38:09 2021 -0400 re-creating exercise lesson 3.21 Kubernetes-Cluster
